# automonisaur

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  SECURITY.md  build.sh  clean.sh  docker-test.sh  entry.sh  env-example.sh  install-local.cmd  install-local.sh  install-requirements.sh  install.sh  requirements.sh  requirements.txt  setup.py  test-local.sh  test-serverless.sh  test.sh  unittests.sh  upload.sh
.github/workflows/: ci.yml  codecov.yml  main.yml  pipeline.yml  python310.yml  python311.yml  python312.yml  python313.yml  python314.yml  python36.yml  python37.yml  python38.yml  python39.yml  unittest.yml
automon/: __init__.py  config.py  elasticsearch_jvm.py  elasticsearch_snapshots.py  healthcheck.py  liveliness.py  logger.py  monitor.py  slack.py  slack_formatting.py  slack_logger.py  swift.py
automon/helpers/: __init__.py  assertions.py  asyncio_.py  cpu.py  dates.py  encapsulation.py  (+10 more)
automon/integrations/veilid-python/: README.md  poetry_install.sh  pyproject.toml  update_schema.sh
automon/integrations/veilid-python/tests/: api.py  conftest.py  test_basic.py  test_crypto.py  test_dht.py  test_routing_context.py  test_table_db.py
automon/integrations/veilid-python/veilid/: __init__.py  api.py  config.py  error.py  json_api.py  operations.py  state.py  types.py
automon/integrations/veilid-python/veilid/schema/: RecvMessage.json  Request.json
docker/: README.md  build.sh  config.sh  entry.sh  images.sh  install-chromedriver.sh  install.sh  pytest.sh  run.sh  test.sh
tests/: test_slack.py  test_slack_es_jvm.py  test_slack_es_snapshot.py
(+586 files in other folders)
