[tool.poetry]
# --- Bumpversion match - do not reorder
name = "veilid"
version = "0.2.5"
# ---
description = ""
authors = ["Veilid Team <contact@veilid.com>"]
readme = "README.md"
packages = [{ include = "veilid" }]

[tool.poetry.dependencies]
python = "^3.11"
jsonschema = "^4.17.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.mypy]
check_untyped_defs = true
